Moved the Eclispe configuration option from the top-level README.